# mm2-telegram-bot

./: .gitignore  bot.py  database.py  env.dist  formatters.py  handlers.py  pyproject.toml  schemas.py  settings.py  transactions.db  utils.py
db/: base.py  models.py  repos.py
handlers/: aliases.py  analytics.py  base.py  message.py  sets.py
tests/: test_parser.py
