[tool.poetry]
name = "new-form-watcher"
version = "0.1.0"
description = ""
authors = ["pikoUsername <galymzhan.amantaj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^3.13.1"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.35"
aiosqlite = "^0.20.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
